infrastructure/containernode/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production-dns01-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: jellyfin-tailscale-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.personalinfra.co.uk
      secretName: jellyfin-tls
  rules:
    - host: jellyfin.personalinfra.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
